--- a/index.html
+++ b/index.html
@@ -1,4 +1,27 @@
 <!DOCTYPE html>
 <html>
-<h1> THIS IS THE START OF EVERYTHING </h1>
+    <head>
+        <link rel="stylesheet" href="main.css">
+    </head>
+    <h1> Cohesion and Coherence </h1>
+    <h3>Essay Checker/Game</h3>
+    <form action="coherence.html">
+        <div class="bigtext">
+            <h4>Essay</h4>
+            <label for="essay-input">Seperate paragraphs with tabs before pasting below</label>
+            <textarea id="essay-input" name="essay-input"></textarea>
+            <input type="submit" value="Check for coherence">
+        </div>
+    </form>
+
+    <form action="cohesion.html">
+        <div class="bigtext">
+            <h4>Paragraph</h4>
+            <label for="para-input">Seperate sentences with .?!</label>
+            <textarea id="para-input" name="para-input"></textarea>
+            <input type="submit" value="Check for cohesion">
+        </div>
+    </form>
+  
 </html>
+
